Key:
+ Added Content/Feature.
~ Changed Content/Feature or Bugfix.
- Removed Content/Feature.

~~~~~~~~~~~~0.0.1 Revitalize 12-30-2022 xx.xx P.M~~~~~~~~~~~~~~
+Dimensional storage unit menu is starting to become more complete. Now has a grab menu that the player can use to throw items into it.
+Dimensional storage unit cna have items thrown into it directly. Just for fun.

~~~~~~~~~~~~0.0.1 Revitalize 12-29-2022 xx.xx P.M~~~~~~~~~~~~~~
~Removed all references to JsonItemReference and migrated all of them to ItemReference in preparation for ItemReference upgrade.
+Now all SDV Object and BigCraftable items are registered by their 1.6 item ids in the ObjectManager to unify some of the object fetching/creation logic.
+Added support for ItemReference to hold info for Artisinal goods.
~Fixed a bug where having multiple cellars built on the farm causes the game to not load???
+Started work on the DimensionalStorageUnitBuilding
~Started to fix InventoryTransferMenu.cs to be able to transfer items back and forth between the player's inventory and the dimensional storage unit.

~~~~~~~~~~~~0.0.1 Revitalize 12-28-2022 xx.xx P.M~~~~~~~~~~~~~~
+Added in infrastructure to add in new buildings! Now custom buildings can be added in for the mod.
+Added in a buildable Cellar. The first tier is smaller than the farmhouse cellar. May add in more into the future.
+Made BuildingBlueprintHelper.cs to help make Stardew Valley Building Blueprints easier.


~~~~~~~~~~~~0.0.1 Revitalize 12-20-2022 xx.xx P.M~~~~~~~~~~~~~~
+Added Statue of Statistics.
    Shows multiple statistics about the player.
+Added in Statue of Perfection Tracking.
    -Tells you what you are missing from shipped items, cooking recipes, crafting recipes, and caught fish.
+Added in Advanced Solar Panels
    -Makes a Battery Pack every 5 sunny days.
+Added in Superior Solar Panels
    -Makes a Battery Pack every 3 sunny days.
~~~~~~~~~~~~0.0.1 Revitalize 12-12-2022 xx.xx P.M~~~~~~~~~~~~~~