@@ -1,0 +1,8 @@
+{
+	"CurrentSearchMode":"Current search mode: {0}",
+	"DisplayName":"Name",
+	"Id": "Item Id",
+	"Category": "Category",
+	"Description": "Description",
+	"Any": "Any"
+}
