@@ -10,7 +10,7 @@ using StardewValley;
 namespace Omegasis.Revitalize.Framework.World.Objects.Items.Farming
 {
     [XmlType("Mods_Revitalize.Framework.World.Objects.Items.Farming.AutoHarvesterGardenPotAttachment")]
-    public class AutoHarvesterGardenPotAttachment:IBasicItemInformationProvider
+    public class AutoHarvesterGardenPotAttachment:CustomItem
     {
 
         public AutoHarvesterGardenPotAttachment()
