@@ -10,7 +10,7 @@ using StardewValley;
 namespace Omegasis.Revitalize.Framework.World.Objects.Items.Farming
 {
     [XmlType("Mods_Revitalize.Framework.World.Objects.Items.Farming.AutoPlanterGardenPotAttachment")]
-    public class AutoPlanterGardenPotAttachment:IBasicItemInformationProvider
+    public class AutoPlanterGardenPotAttachment:CustomItem
     {
 
         public AutoPlanterGardenPotAttachment()
