@@ -202,12 +202,12 @@ namespace Omegasis.Revitalize.Framework.World.Objects
             AutoHarvesterGardenPotAttachment autoHarvesterGardenPotAttachment = new AutoHarvesterGardenPotAttachment(new BasicItemInformation("", FarmingItems.AutoHarvesterGardenPotAttachment, "", CategoryNames.Farming, CategoryColors.Farming, -300, -300, 0, false, 5000, false, false, TextureManagers.Items_Farming.createAnimationManager("AutoHarvesterGardenPotAttachment", new Animation(0, 0, 16, 16)), Color.White, false, new Vector2(1, 1), Vector2.Zero, null, null));
             this.addItem(FarmingItems.AutoHarvesterGardenPotAttachment, autoHarvesterGardenPotAttachment);
 
-            this.addItem(MiscItemIds.RadioactiveFuel, new IBasicItemInformationProvider(new BasicItemInformation("", MiscItemIds.RadioactiveFuel, "", CategoryNames.Misc, CategoryColors.Misc, -300, -300, 0, false, 5000, false, false, TextureManagers.Items_Misc.createAnimationManager("RadioactiveFuel", new Animation(0, 0, 16, 16)), Color.White, false, new Vector2(1, 1), Vector2.Zero, null, null)));
+            this.addItem(MiscItemIds.RadioactiveFuel, new CustomItem(new BasicItemInformation("", MiscItemIds.RadioactiveFuel, "", CategoryNames.Misc, CategoryColors.Misc, -300, -300, 0, false, 5000, false, false, TextureManagers.Items_Misc.createAnimationManager("RadioactiveFuel", new Animation(0, 0, 16, 16)), Color.White, false, new Vector2(1, 1), Vector2.Zero, null, null)));
 
             //Placeholder item for refilling the silos on the player's farm.
-            this.addItem(FarmingItems.RefillSilosFakeItem, new IBasicItemInformationProvider(new BasicItemInformation("", FarmingItems.RefillSilosFakeItem, "", CategoryNames.Farming, CategoryColors.Farming, -300, -300, StardewValley.Object.fragility_Removable, false, 100, false, false, TextureManagers.Items_Farming.createAnimationManager("HayRefill", new Animation(0, 0, 16, 16)), Color.White, false, new Vector2(1, 1), Vector2.Zero, null, null)));
+            this.addItem(FarmingItems.RefillSilosFakeItem, new CustomItem(new BasicItemInformation("", FarmingItems.RefillSilosFakeItem, "", CategoryNames.Farming, CategoryColors.Farming, -300, -300, StardewValley.Object.fragility_Removable, false, 100, false, false, TextureManagers.Items_Farming.createAnimationManager("HayRefill", new Animation(0, 0, 16, 16)), Color.White, false, new Vector2(1, 1), Vector2.Zero, null, null)));
 
-            this.addItem(MiscItemIds.MovieTheaterTicketSubscription, new IBasicItemInformationProvider(new BasicItemInformation("", MiscItemIds.MovieTheaterTicketSubscription, "", CategoryNames.Misc, CategoryColors.Misc, -300, -300, StardewValley.Object.fragility_Removable, false, 100, false, false, TextureManagers.Items_Misc.createAnimationManager("MovieTicketSubscription", new Animation(0, 0, 16, 16)), Color.White, false, new Vector2(1, 1), Vector2.Zero, null, null)));
+            this.addItem(MiscItemIds.MovieTheaterTicketSubscription, new CustomItem(new BasicItemInformation("", MiscItemIds.MovieTheaterTicketSubscription, "", CategoryNames.Misc, CategoryColors.Misc, -300, -300, StardewValley.Object.fragility_Removable, false, 100, false, false, TextureManagers.Items_Misc.createAnimationManager("MovieTicketSubscription", new Animation(0, 0, 16, 16)), Color.White, false, new Vector2(1, 1), Vector2.Zero, null, null)));
         }
 
         private void loadInBlueprints()
