@@ -4,6 +4,10 @@ Key:
 - Removed Content/Feature.
 
 ~~~~~~~~~~~~0.0.1 Revitalize 12-30-2022 xx.xx P.M~~~~~~~~~~~~~~
+! Happy New Years! 
++Added new search modes to the item search bar for the Dimensional Storage Unit, to have different ways to find different items.
+
+~~~~~~~~~~~~0.0.1 Revitalize 12-30-2022 xx.xx P.M~~~~~~~~~~~~~~
 +Dimensional storage unit menu is starting to become more complete. Now has a grab menu that the player can use to throw items into it.
 +Dimensional storage unit cna have items thrown into it directly. Just for fun.
 
